2009-01-28 : Changed how to edit existing notes in new encounter.  Click on edit link instead of note (Randy)
             Pass demographic numbers in post of form rather than in url for prevention report(Randy)
2008-12-31 : client image displays on client summary page (Ted)
2008-12-07 : First commit for quatro merge
	     Includes most of the security framework, homepage, ORGtree viewer
	     Relevant db changes (not yet incorporated into main files until we do some testing)
2008-11-18 : Caisi Integrator also provides photos when client is copied from remote server.
2008-11-17 : removed the old RFQ required intake fields editor.

-----------------
Branch 2008-11-03
-----------------

2008-10-25:  Added Limited Use Code Integration to Rx (Jay)
2008-10-20 : Added ability to delete/undelete eDocs and filter display of eDocs (Randy,2032846)
2008-10-09 : Added Photo as an option in DMS, don't use update-2008-10-09.sql if you already have this option in your drop downi list. (Dan Brow)
2008-10-07 : Increased billing unit field size to 6 characters to accommadate percentage billing. (Dan Brow)
2008-09-26 : fix link to encounter in myOSCAR and added code to insert myOSCAR message into encounter note (Randy)
2008-09-25 : new provider service reports export (Ted)
2008-09-23 : ability to bulk export activity reports to csv (Ted)
2008-09-22 : When editing appointment only grab status from db if page is loading for first time else grab it from request (Randy)
2008-09-16 : add/edit appointment page, change input field for status to dropdown list box (Toby)
2008-09-12 : Caisi Integrator has the ability to manage which demographics are linked together. (Ted)
2008-09-11 : Fixed error when correcting invoices duplicate codes can be created for ON billing (Randy,2105933)
2008-09-09 : Fixed bug with Report By Template with dates in Firefox 3 and Safari which only the bottom date param would work (Jay,2102612)